--- a/environment.yml
+++ b/environment.yml
@@ -9,40 +9,36 @@ dependencies:
   - certifi=2019.11.28=py38_0
   - cycler=0.10.0=py_2
   - decorator=4.4.1=py_0
-  - freetype=2.10.0=he983fc9_1
-  - icu=64.2=he1b5a44_1
-  - kiwisolver=1.1.0=py38hc9558a2_0
-  - ld_impl_linux-64=2.33.1=h53a641e_7
+  - freetype=2.10.0
+  - icu=64.2
+  - kiwisolver=1.1.0
   - libblas=3.8.0=14_openblas
   - libcblas=3.8.0=14_openblas
-  - libffi=3.2.1=he1b5a44_1006
-  - libgcc-ng=9.2.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_2
+  - libffi=3.2.1
   - liblapack=3.8.0=14_openblas
-  - libopenblas=0.3.7=h5ec1e0e_4
-  - libpng=1.6.37=hed695b0_0
-  - libstdcxx-ng=9.2.0=hdf63c60_0
-  - matplotlib-base=3.1.2=py38h250f245_1
-  - ncurses=6.1=hf484d3e_1002
+  - libopenblas=0.3.7
+  - libpng=1.6.37
+  - matplotlib-base=3.1.2
+  - ncurses=6.1
   - networkx=2.4=py_0
-  - numpy=1.17.3=py38h95a1406_0
-  - openssl=1.1.1d=h516909a_0
-  - pandas=0.25.3=py38hb3f55d8_0
+  - numpy=1.17.3
+  - openssl=1.1.1d
+  - pandas=0.25.3
   - patsy=0.5.1=py_0
   - pip=19.3.1=py38_0
   - pyparsing=2.4.5=py_0
-  - python=3.8.0=h357f687_5
+  - python=3.8.0
   - python-dateutil=2.8.1=py_0
   - pytz=2019.3=py_0
-  - readline=8.0=hf8c457e_0
-  - scipy=1.3.2=py38h921218d_0
+  - readline=8.0
+  - scipy=1.3.2
   - seaborn=0.9.0=py_2
   - setuptools=42.0.2=py38_0
   - six=1.13.0=py38_0
-  - sqlite=3.30.1=hcee41ef_0
-  - statsmodels=0.10.2=py38hc1659b7_0
-  - tk=8.6.10=hed695b0_0
-  - tornado=6.0.3=py38h516909a_0
+  - sqlite=3.30.1
+  - statsmodels=0.10.2
+  - tk=8.6.10
+  - tornado=6.0.3
   - wheel=0.33.6=py38_0
-  - xz=5.2.4=h14c3975_1001
-  - zlib=1.2.11=h516909a_1006
+  - xz=5.2.4
+  - zlib=1.2.11
