--- a/.github/workflows/test-phen2gene.yml
+++ b/.github/workflows/test-phen2gene.yml
@@ -31,8 +31,7 @@ jobs:
       shell: bash -l {0}
       run: |
         bash setup.sh
-    - name: Run examples
-      shell: bash -l {0}
+    - name: Test with pytest
       run: |
-        python3 phen2gene.py -f example/HPO_sample.txt -out out/prioritizedgenelist
+        pytest
         
