only run workflow on pr or push to master

--- a/.github/workflows/test-phen2gene.yml
+++ b/.github/workflows/test-phen2gene.yml
@@ -4,7 +4,7 @@ name: Test Phen2Gene
 
 on:
   push:
-    branches: [ master, ci-tests ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
